--- a/sboard/src/main/webapp/resources/css/style.css
+++ b/sboard/src/main/webapp/resources/css/style.css
@@ -56,7 +56,7 @@ input, textarea { outline: none; }
 }
 
 /* 글쓰기 */
-#board > .write input[name=subject] { width: 100%; height: 22px; border: 0; }
+#board > .write input[name=title] { width: 100%; height: 22px; border: 0; }
 #board > .write label {}
 #board > .write textarea { width: 100%; border: 0; resize: none; }
 #board > .write td:nth-child(1) { 
@@ -117,7 +117,7 @@ input, textarea { outline: none; }
 }
 
 /* 글보기 */
-#board > .view input[name=subject] { width: 100%; height: 22px; border: 0; }
+#board > .view input[name=title] { width: 100%; height: 22px; border: 0; }
 #board > .view label {}
 #board > .view textarea { width: 100%; border: 0; resize: none; }
 #board > .view td:nth-child(1) { 
